--- a/IO2017/src/main/resources/templates/fragments/sidebar.html
+++ b/IO2017/src/main/resources/templates/fragments/sidebar.html
@@ -1,12 +1,18 @@
 <nav th:fragment="sidebar" class="navbar navbar-fixed-top col-md-2" id="sidebar-menu" role="navigation">
 	 <ul class="nav sidebar-nav">
-                <li class="dropdown">
+                <!-- <li class="dropdown">
                   <a href="#collapsing-menu" class="dropdown-toggle" data-toggle="collapse">Kategorie<span class="caret"></span></a>
                   <ul id="collapsing-menu" class="collapse">
-                    <!-- <li class="dropdown-header">Dropdown heading</li> -->
+                    <li class="dropdown-header">Dropdown heading</li>
                     <li th:each="category : ${categories}"><a href="#"><p th:text="${category.name}"></p></a></li>
                
                   </ul>
-                </li>
+                </li> -->
+                <li><a th:href="@{/categories}">Ucz się</a></li>
+                <li sec:authorize="hasRole('ROLE_ADMIN')"><a
+					th:href="@{/admin}">Panel administracyjny</a></li>
+				<li sec:authorize="isAuthenticated()">
+					<a th:href="@{/dictionaries}">Zarządzaj swoimi słownikami</a>
+				</li>	
             </ul>
 </nav>
