wyświetlanie profili uzytkowników

--- a/IO2017/src/main/resources/templates/quiz_abcd.html
+++ b/IO2017/src/main/resources/templates/quiz_abcd.html
@@ -147,7 +147,7 @@
 		<th:block th:inline="text">
 			var id = [[${dictionaryId}]];
 			// 0 jak abcd, 1 jak otwarty
-			var modeT = 0;
+			var mode = 0;
 		</th:block>
 		$.ajax({
 		     type: "POST",
