Większość podstron jest już responsywna

--- a/IO2017/src/main/resources/templates/confirm_registration.html
+++ b/IO2017/src/main/resources/templates/confirm_registration.html
@@ -10,7 +10,7 @@
 	<main class='wrapper'>
 	<div th:replace="fragments/header :: header"></div>
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
-	<div class="col-md-4 col-md-offset-5">
+	<div class="col-md-4 col-md-offset-5 col-sm-5 col-sm-offset-4">
 	<p th:text="${message}"> </p>
 	<a th:href="@{/home}">Przejdź do strony głównej</a>
 	</div>
