--- a/IO2017/src/main/resources/static/css/basic.css
+++ b/IO2017/src/main/resources/static/css/basic.css
@@ -66,3 +66,16 @@ padding: 5px;
     border: 1px solid rgba(0,0,0,.125);
     border-radius: .25rem;
 }
+
+
+
+@media screen and (max-width: 786px) {
+	.wrapper{
+    padding-top: 0; 
+    padding-bottom: 100px;
+}
+	#menuIcon {
+	color: #eeeeee;
+	font-size: 35px; 
+	}
+}
