--- a/IO2017/src/main/resources/templates/admin.html
+++ b/IO2017/src/main/resources/templates/admin.html
@@ -10,7 +10,7 @@
 	<main class='wrapper'>
 	<div th:replace="fragments/header :: header"></div>
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
-	<div class="col-md-6 col-md-offset-4">
+	<div class="col-md-7 col-md-offset-4 col-sm-9 col-sm-offset-3">
 		<h1>Panel administracyjny</h1>
 		<a th:href="@{/admin/users}" class="btn btn-primary" role="button">Zarządzanie
 			użytkownikami</a>
