--- a/IO2017/src/main/resources/templates/admin_dictionaries.html
+++ b/IO2017/src/main/resources/templates/admin_dictionaries.html
@@ -12,7 +12,7 @@
 	<main class="wrapper">
 	<div th:replace="fragments/header :: header"></div>
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
-	<div class="col-md-8 col-md-offset-3">
+	<div class="col-md-8 col-md-offset-3 col-sm-8 col-sm-offset-3">
 		<span th:if="${isNotAdminPage}" >
 			<a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/admin/dictionaries}"
 					class="btn btn-primary" role="button">Wyświetl wszystkie słowniki</a>
