--- a/IO2017/src/main/resources/templates/categories.html
+++ b/IO2017/src/main/resources/templates/categories.html
@@ -42,7 +42,7 @@
 	<main class="wrapper">
 	<div th:replace="fragments/header :: header"></div>
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
-	<div class="col-md-8 col-md-offset-3">
+	<div class="col-md-8 col-md-offset-3 col-sm-8 col-sm-offset-3">
 		<h1>Kategorie:</h1>
 		<div class="panel-group" id="accordion" role="tablist"
 			aria-multiselectable="true">
