--- a/IO2017/src/main/resources/templates/category.html
+++ b/IO2017/src/main/resources/templates/category.html
@@ -10,7 +10,7 @@
 <main class="wrapper">
 	<div th:replace="fragments/header :: header"></div>
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
-	<div class="col-md-4 col-md-offset-5">
+	<div class="col-md-4 col-md-offset-5 col-sm-4 col-sm-offset-5">
 	<h1 th:text="${category.name}"></h1>
 	<p>
 			<a th:href="@{/categories}">powrót</a>
