--- a/IO2017/src/main/resources/templates/edit_category.html
+++ b/IO2017/src/main/resources/templates/edit_category.html
@@ -10,7 +10,7 @@
 	<main class='wrapper'>
 	<div th:replace="fragments/header :: header"></div>
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
-	<div class="col-md-4 col-md-offset-5">
+	<div class="col-md-4 col-md-offset-5 col-sm-5 col-sm-offset-4 col-xs-8 col-xs-offset-2">
 		<form action="#" th:action="@{/admin/categories/editCategory/submit}" th:object="${category}"
 			method="post" class="form-horizontal">
 			<div class="form-group">
