--- a/IO2017/src/main/resources/templates/edit_dictionary.html
+++ b/IO2017/src/main/resources/templates/edit_dictionary.html
@@ -11,11 +11,11 @@
 	<div th:replace="fragments/header :: header"></div>
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
 	
-	<div class="col-md-4 col-md-offset-5">
+	<div class="col-md-4 col-md-offset-5 col-sm-5 col-sm-offset-4 col-xs-8 col-xs-offset-2">
 		<a role="button" class="btn btn-info" th:href="@{/dictionaries}">Cofnij</a>
 	</div>
 	
-	<div class="col-md-4 col-md-offset-5"  style="padding-top: 10px;">
+	<div class="col-md-4 col-md-offset-5 col-sm-5 col-sm-offset-4 col-xs-8 col-xs-offset-2" style="padding-top: 10px">
 		<form th:action="@{/dictionaries/editDictionary/submit}"
 			method="post" class="form-horizontal" th:object="${dictionary}">
 			<div class="form-group">
