--- a/IO2017/src/main/resources/templates/edit_words.html
+++ b/IO2017/src/main/resources/templates/edit_words.html
@@ -10,7 +10,7 @@
 	<main class="wrapper">
 	<div th:replace="fragments/header :: header"></div>
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
-	<div class="col-md-8 col-md-offset-3">
+	<div class="col-md-8 col-md-offset-3 col-sm-9 col-sm-offset-3 col-xs-10 col-xs-offset-1">
 	
 		<a  sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/admin}" class="btn btn-primary" role="button">Panel
 			administracyjny</a>
