--- a/IO2017/src/main/resources/templates/edit_yourself.html
+++ b/IO2017/src/main/resources/templates/edit_yourself.html
@@ -11,7 +11,7 @@
 	<main class='wrapper'>
 	<div th:replace="fragments/header :: header"></div>
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
-	<div class="col-md-4 col-md-offset-5">
+	<div class="col-md-4 col-md-offset-5 col-sm-5 col-sm-offset-4 col-sm-8 col-sm-offset-2">
 		<form action="#" th:action="@{/users/editUser/submit}"
 			method="post" class="form-horizontal" th:object="${user}">
 			<div class="form-group">
