--- a/IO2017/src/main/resources/templates/errorPage.html
+++ b/IO2017/src/main/resources/templates/errorPage.html
@@ -10,7 +10,7 @@
 	<main class='wrapper'>
 	<div th:replace="fragments/header :: header"></div>
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
-	<div class="col-md-4 col-md-offset-5">
+	<div class="col-md-4 col-md-offset-5 col-sm-5 col-sm-offset-4 col-xs-8 col-xs-offset-2">
 		<h1>Wystąpił błąd</h1>
 		<h3 th:text="${errorName}"></h3>
 		<p th:text="${errorInfo}"></p>
