--- a/IO2017/src/main/resources/templates/fragments/footer.html
+++ b/IO2017/src/main/resources/templates/fragments/footer.html
@@ -2,10 +2,7 @@
 	<nav class="nav navbar-inverse navbar-bottom ">
 	<div class="container-fluid">
 	<p class="navbar-text">Strona stworzona w ramach przedmiotu Inżynieria Oprogramowania </p>
-	<p class="navbar-text">Copyright © 2017 <em>MG, DO, WO, MP</em></p>
-	<ul class="nav navbar-nav navbar-right">
-		<li><a href="#">Skontaktuj się z nami</a></li>
-		</ul>
+	<p class="navbar-text">Copyright © 2017 <em>MG, DO, WO</em></p>
 		</div>
 	</nav>
 </div>
