--- a/IO2017/src/main/resources/templates/fragments/sidebar.html
+++ b/IO2017/src/main/resources/templates/fragments/sidebar.html
@@ -1,4 +1,4 @@
-<nav th:fragment="sidebar" class="navbar navbar-fixed-top col-md-2" id="sidebar-menu" role="navigation">
+<nav th:fragment="sidebar" class="navbar navbar-fixed-top col-md-2 col-sm-3 hidden-xs" id="sidebar-menu" role="navigation">
 	 <ul class="nav sidebar-nav">
                 <!-- <li class="dropdown">
                   <a href="#collapsing-menu" class="dropdown-toggle" data-toggle="collapse">Kategorie<span class="caret"></span></a>
@@ -15,8 +15,8 @@
 					<a th:href="@{/dictionaries}">Zarządzaj swoimi słownikami</a>
 				</li>	
 				<li sec:authorize="isAuthenticated()">
-				<form style="margin-left: 20px" th:action="@{/searchUsers}" class="form-horizontal">
-				<div class="form-group">
+				<form th:action="@{/searchUsers}" class="form-horizontal col-md-2 col-sm-3">
+				<div class="form-group col-md-2 col-sm-3">
 				<input type="text" name="name" placeholder="Szukaj użytkownika"/>
 				</div>
 				</form>
