--- a/IO2017/src/main/resources/templates/home.html
+++ b/IO2017/src/main/resources/templates/home.html
@@ -10,7 +10,7 @@
 <main class="wrapper">
 	<div th:replace="fragments/header :: header"></div>
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
-	<div class="col-md-4 col-md-offset-5">
+	<div class="col-md-5 col-md-offset-4 col-sm-7 col-sm-offset-4 col-xs-10 col-xs-offset-1">
 	<h1>Witaj na stronie do nauki fiszek!</h1>
 	<p sec:authorize="isAuthenticated()">
 		<p class="navbar-text">
