--- a/IO2017/src/main/resources/templates/profile.html
+++ b/IO2017/src/main/resources/templates/profile.html
@@ -15,7 +15,7 @@ $(document).ready(function(){
 	<main class='wrapper'>
 	<div th:replace="fragments/header :: header"></div>
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
-	<div class="col-md-8 col-md-offset-3">
+	<div class="col-md-8 col-md-offset-3 col-sm-9 col-sm-offset-3 col-xs-10 col-xs-offset-1">
 		<h1>Profil użytkownika</h1>
 		<p>
 			<label for="login">Login:</label>
