--- a/IO2017/src/main/resources/templates/quiz_options.html
+++ b/IO2017/src/main/resources/templates/quiz_options.html
@@ -10,7 +10,7 @@
 <main class="wrapper">
 	<div th:replace="fragments/header :: header"></div>
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
-	<div  class="col-md-8 col-md-offset-3">
+	<div  class="col-md-8 col-md-offset-3 col-sm-9 col-sm-offset-3 col-xs-10 col-xs-offset-1">
 	<p class="bg-warning">
 		Wynik z danego quizy wyliczany jest z następującego wzoru <br /><br />
 		Wynik = (poprawne_odpowiedzi / liczba_słów_w_quizie) * (liczba_słów_w_quizie / liczba_słów_w_całym_słowniku)  
