--- a/IO2017/src/main/resources/templates/searchUsers.html
+++ b/IO2017/src/main/resources/templates/searchUsers.html
@@ -10,7 +10,7 @@
 	<main class="wrapper">
 	<div th:replace="fragments/header :: header"></div>
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
-	<div class="col-md-8 col-md-offset-3">
+	<div class="col-md-8 col-md-offset-3 col-sm-9 col-sm-offset-3 col-sm-10 col-sm-offset-1">
 		<h1>
 			Wyniki wyszukiwania dla <span th:text="${name}"></span>
 		</h1>
