--- a/IO2017/src/main/resources/templates/quiz_flashcard.html
+++ b/IO2017/src/main/resources/templates/quiz_flashcard.html
@@ -103,17 +103,17 @@ var obj = {
 <main class="wrapper">
 	<div th:replace="fragments/header :: header"></div>
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
-	<div  class="col-md-8 col-md-offset-3">
+	<div  class="col-md-8 col-md-offset-3 col-sm-9 col-sm-offset-3 col-xs-10 col-xs-offset-1">
 			<h2>Nazwa słownika: <span th:text="${dictionaryName}"></span> </h2>
 			<h3 th:if="${hasWords}" class="card-title">Słówko <span id="pageNumber">X</span> / <span th:text="${wordsNumber}"></span>  </h3>
 			<a role="button" class="btn btn-warning" th:if="${hasWords}"
 				th:href="@{/quiz/flashcards(id=${dictionaryId}, mode=${changeMode})}">Zmień kierunek</a>
 		  <div th:if="${hasWords}" class="row" style="height: 600px;">
-		    <div class="col-md-4" style="height: 500px;">
+		    <div class="col-md-4 col-sm-2 col-xs-2" style="height: 500px;">
 			    <span id="prevPg" style="color: indianred; float:right; margin-top: 235px; font-size: 30px;" class="glyphicon glyphicon-arrow-left"
 		    			 onclick="previousPage();" />
 		    </div>
-			<div class="col-md-4" style="height: 500px;">
+			<div class="col-md-4 col-sm-5 col-xs-8" style="height: 500px;">
 			    <div class="card" style="height: 100%;">
 			        <div class="card-block" style="height: 50%;">
 			            <h2 class="card-title" th:text="${firstHeader}">Card title</h2>
@@ -130,7 +130,7 @@ var obj = {
 			
 			    </div>
 			</div>
-		    <div class="col-md-4" style="height: 500px;">
+		    <div class="col-md-4 col-sm-2 col-xs-2" style="height: 500px;">
 		    	
 		    	<span id="nextPg" style="color: indianred; float:left; margin-top: 235px; font-size: 30px;" class="glyphicon glyphicon-arrow-right"
 		    			 onclick="nextPage();" />
