--- a/IO2017/src/main/resources/templates/quiz_open.html
+++ b/IO2017/src/main/resources/templates/quiz_open.html
@@ -154,20 +154,20 @@
 <main class="wrapper">
 	<div th:replace="fragments/header :: header"></div>
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
-	<div  class="col-md-8 col-md-offset-3">
+	<div  class="col-md-8 col-md-offset-3 col-sm-9 col-sm-offset-3 col-xs-10 col-xs-offset-1">
 			<h2>Nazwa słownika: <span th:text="${dictionaryName}"></span> </h2>
 			<h3 th:if="${hasWords}" class="card-title">Pytanie <span id="pageNumber">X</span> / <span th:text="${wordsNumber}"></span>  </h3>
 			<div th:if="${hasWords}" class="row" style="height: 250px;">
-		    <div class="col-md-4" style="height: 200px;">
+		    <div class="col-md-4 col-sm-3 col-xs-2" style="height: 200px;">
 			    <span id="prevPg" style="color: indianred; float:right; margin-top: 95px; font-size: 30px;" class="glyphicon glyphicon-arrow-left"
 		    			 onclick="previousPage();" />
 		    </div>
-			<div class="col-md-4" style="height: 200px;">
+			<div class="col-md-4 col-sm-6 col-xs-8" style="height: 200px;">
 				<h2 class="card-title">Przetłumacz</h2>
 			    <p id="query" class="card-text" style="font-size:25px;">coś po polsku</p>
 				<input type="text" id="translated" class="form-control" />			    
 			</div>
-		    <div class="col-md-4" style="height: 200px;">
+		    <div class="col-md-4 col-sm-3 col-xs-2" style="height: 200px;">
 		    	
 		    	<span id="nextPg" style="color: indianred; float:left; margin-top: 95px; font-size: 30px;" class="glyphicon glyphicon-arrow-right"
 		    			 onclick="nextPage();" />
