poprawa stylu kodu: Integery, LinkedList, enumy, Questions

--- a/IO2017/src/main/resources/templates/quiz_options.html
+++ b/IO2017/src/main/resources/templates/quiz_options.html
@@ -24,8 +24,8 @@
 			<input type="hidden" name="id" th:value="${id}"/>
 			<label for="mode">Wybierz kierunek tłumaczenia:</label>
 			<select class="form-control" name="mode" id="mode">
-				<option value="fromPolish">POLSKI na <span th:text="${dictionaryLanguage}"></span></option>
-				<option value="toPolish"><span th:text="${dictionaryLanguage}"></span> na POLSKI</option>
+				<option value="FROM_POLISH">POLSKI na <span th:text="${dictionaryLanguage}"></span></option>
+				<option value="TO_POLISH"><span th:text="${dictionaryLanguage}"></span> na POLSKI</option>
 			</select>
 			<label for="number">Wybierz liczbę słówek:</label>
 			<select class="form-control" name="number" id="number">
@@ -45,8 +45,8 @@
 			<input type="hidden" name="id" th:value="${id}"/>
 			<label for="mode">Wybierz kierunek tłumaczenia:</label>
 			<select class="form-control" name="mode" id="mode">
-				<option value="fromPolish">POLSKI na <span th:text="${dictionaryLanguage}"></span></option>
-				<option value="toPolish"><span th:text="${dictionaryLanguage}"></span> na POLSKI</option>
+				<option value="FROM_POLISH">POLSKI na <span th:text="${dictionaryLanguage}"></span></option>
+				<option value="TO_POLISH"><span th:text="${dictionaryLanguage}"></span> na POLSKI</option>
 			</select>
 			<label for="number">Wybierz liczbę słówek:</label>
 			<select class="form-control" name="number" id="number">
